tests/fixtures/invalid/none_add_bytes.py
# Cannot add None and Bytes
x: None = None + b"hello"
